# platform.upstream.sgml-skel

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  install-dtd.sh  install-dtd.sh.in  mkinstalldirs  parse-sgml-catalog.sh  parse-sgml-catalog.sh.in  sgml-register-catalog  sgml-register-catalog.in  sgml-skel-0.6.tar.bz2.delta  sgml-skel-0.6.tar.bz2.id  sgml2xmlcat.sh  sgml2xmlcat.sh.in
packaging/: edit-xml-catalog.sh  install-catalog.in  sgml-skel-edit-cat.diff  sgml-skel-regcat.diff  sgml-skel-regcat2.diff  sgml-skel.spec
